entries/static/entries/css/h-entry.styl
ol.entries, div.entry
	display flex
	margin-bottom 0
	flex 1
	flex-direction column
	justify-content center
	> li
		margin-bottom 1rem
		&:last-child
			margin-bottom 0

.card.h-entry
	.e-content
		ul
			list-style-type disc
		ul, ol
			margin-bottom 1rem
			ul
				list-style-type circle
			ul, ol
				margin-bottom 0
				ul
					list-style-type square
		img
			max-width 100%
		> :last-child
			margin-bottom 0

	.card-footer
		text-align center
		> *
			display inline-block
			margin-right 1rem
			&:last-child
				margin-right 0
		.h-card > img
			height 1em
			vertical-align baseline

